# aiogram-template

./: Makefile  README.md  pyproject.toml  requirements.txt
package/: __main__.py  bot.py
package/config/: Config.py  __init__.py
package/db/: __init__.py
package/handlers/: __init__.py  add.py  edit.py  help.py  list.py  remove.py  start.py
