[tool.poetry]
name = "aiogram-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aiogram_test"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pydantic = "^1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
